--- a/week4/midterm_wireframe/index.html
+++ b/week4/midterm_wireframe/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+	<script src="main.js"></script>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="image-scroll">
-	<img class="image" src="http://placekitten.com/1000/500"/>
-	<img class="image" src="http://placekitten.com/1000/502"/>
-	<img class="image" src="http://placekitten.com/1000/510"/>
-	<img class="image" src="http://placekitten.com/1000/503"/>
-	<img class="image" src="http://placekitten.com/1000/504"/>
-	<img class="image" src="http://placekitten.com/1000/505"/>
-	<img class="image" src="http://placekitten.com/1000/506"/>
-	<img class="image" src="http://placekitten.com/1000/507"/>
-	<img class="image" src="http://placekitten.com/1000/520"/>
+<div id="image-scroll" data-mouse-down="0" data-prev-percent="0">
+	<img class="image" src="http://placekitten.com/1000/500" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/502" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/510" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/503" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/504" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/505" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/506" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/507" draggable="false"/>
+	<img class="image" src="http://placekitten.com/1000/520" draggable="false"/>
 </body>
 </div>
 </html>
