update + add images

--- a/week4/midterm_wireframe/index.html
+++ b/week4/midterm_wireframe/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="main.js"></script>
+	<script src="main.js" defer></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="image-scroll" data-mouse-down="0" data-prev-percent="0">
-	<img class="image" src="http://placekitten.com/1000/500" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/502" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/510" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/503" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/504" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/505" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/506" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/507" draggable="false"/>
-	<img class="image" src="http://placekitten.com/1000/520" draggable="false"/>
-</body>
+	<img class="image" src="content/1.jpg" draggable="false"/>
+	<img class="image" src="content/2.jpg" draggable="false"/>
+	<img class="image" src="content/3.jpg" draggable="false"/>
+	<img class="image" src="content/4.jpg" draggable="false"/>
+	<img class="image" src="content/5.jpg" draggable="false"/>
+	<img class="image" src="content/6.jpg" draggable="false"/>
+	<img class="image" src="content/7.jpg" draggable="false"/>
+	<img class="image" src="content/8.jpg" draggable="false"/>
 </div>
+</body>
 </html>
