added touch functionality

--- a/week4/midterm/index.html
+++ b/week4/midterm/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="image-scroll" data-mouse-down="0" data-prev-percent="0">
+<div id="image-scroll" data-point-start="0" data-prev-percent="0">
 	<img class="image" src="content/1.jpg" draggable="false"/>
 	<img class="image" src="content/2.jpg" draggable="false"/>
 	<img class="image" src="content/3.jpg" draggable="false"/>
