mobile compatible images

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div id="image-scroll" data-point-start="0" data-prev-percent="0">
-	<img class="image" src="content/1.jpg" draggable="false"/>
-	<img class="image" src="content/2.jpg" draggable="false"/>
-	<img class="image" src="content/3.jpg" draggable="false"/>
-	<img class="image" src="content/4.jpg" draggable="false"/>
-	<img class="image" src="content/5.jpg" draggable="false"/>
-	<img class="image" src="content/6.jpg" draggable="false"/>
-	<img class="image" src="content/7.jpg" draggable="false"/>
-	<img class="image" src="content/8.jpg" draggable="false"/>
+	<img class="image" srcset="content/1m.jpg 1600w, content/1.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/1.jpg" draggable="false">
+	<img class="image" srcset="content/2m.jpg 1600w, content/2.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/2.jpg" draggable="false">
+	<img class="image" srcset="content/3m.jpg 1600w, content/3.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/3.jpg" draggable="false">
+	<img class="image" srcset="content/4m.jpg 1600w, content/4.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/4.jpg" draggable="false">
+	<img class="image" srcset="content/5m.jpg 1600w, content/5.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/5.jpg" draggable="false">
+	<img class="image" srcset="content/6m.jpg 1600w, content/6.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/6.jpg" draggable="false">
+	<img class="image" srcset="content/7m.jpg 1600w, content/7.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/7.jpg" draggable="false">
+	<img class="image" srcset="content/8m.jpg 1600w, content/8.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/8.jpg" draggable="false">
 </div>
 </body>
 </html>
