added about page

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<a href="about.html" class="about">info.</a>
+<a href="about.html" class="about-m">i.</a>
+
+<!-- images to fill gallery -->
 <div id="image-scroll" data-point-start="0" data-prev-percent="0">
 	<img class="image" srcset="content/1m.jpg 1600w, content/1.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/1.jpg" draggable="false">
 	<img class="image" srcset="content/2m.jpg 1600w, content/2.jpg 2400w" sizes="(min-width: 768px) 1600px, 100vw" src="content/2.jpg" draggable="false">
