--- a/midterm/about.html
+++ b/midterm/about.html
@@ -7,12 +7,14 @@
 <body>
     <a href="index.html" class="about">home.</a>
     <a href="index.html" class="about-m">h.</a>
-    <img class="about-image" src="content/about.jpg" draggable="false">
-    <div id="about-para">
-        class — contemporary techniques <br>in digital photography <br>
-        camera — sony a6400 <br>
-        lens — sigma 16mm f/1.4 dc dn<br>
-        locations — manhattan & brooklyn
+    <div id="about-box">
+        <img class="about-image" src="content/about.jpg" draggable="false">
+        <div id="about-para">
+            class — contemporary techniques <br>in digital photography <br>
+            camera — sony a6400 <br>
+            lens — sigma 16mm f/1.4 dc dn<br>
+            locations — manhattan & brooklyn
+        </div>
     </div>
 </body>
 </html>
