--- a/final/index.html
+++ b/final/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<script src="main.js" defer></script>
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
+        <title>three.js app</title>
+        <script src="main.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+    </body>
 </html>
