--- a/final/index.html
+++ b/final/index.html
@@ -3,9 +3,29 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
         <title>three.js app</title>
-        <script src="main.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <script type="module" src="main.js"></script>
+        <div id="scene"></div>
+
+        <div class="text-overlay" id="text1">
+        nick kim - 3d generalist
+        left click to advance
+        right click to go back
+        </div>
+        <div class="text-overlay" id="text2">
+        nyu tandon school of engineering
+        class of 2023
+        integrated design and media
+        </div>
+        <div class="text-overlay" id="text3">
+        maya, unreal, adobe suite
+        python, java, css/javascript
+        </div>
+        <div class="text-overlay" id="text4">
+        njk326@nyu.edu
+        njk99.com
+        </div>
     </body>
 </html>
